--- a/OpenCase/RUS/news.html
+++ b/OpenCase/RUS/news.html
@@ -3,6 +3,7 @@
 		<title>Обновления</title>
 		<script src="../scripts/jquery.min.js"></script>
 		<script src="../scripts/jquery.cookie.js"></script>
+		<script src="../scripts/main.js"></script>
 		<script src="../scripts/settings.js"></script>
 
 		<script src="../scripts/navigationMenu.js"></script>
