--- a/OpenCase/RUS/open.html
+++ b/OpenCase/RUS/open.html
@@ -3,11 +3,13 @@
 <title>Открытие кейса</title>
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/main.js"></script>
+<script src="../scripts/settings.js"></script>
 <script src="../scripts/cases2.js"></script>
 <script src="../scripts/quality.js"></script>
-<script src="../scripts/settings.js"></script>
 <script src="../scripts/skinNames.js"></script>
 <script src="../scripts/prices.js"></script>
+<script src="../scripts/openCase.js"></script>
 <script src="../scripts/jquery-ui.min.js"></script>
 
 <link rel="stylesheet" type="text/css" href="../css/main.css">
