--- a/OpenCase/RUS/about.html
+++ b/OpenCase/RUS/about.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8">
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/jquery.cookie.js"></script>
+<script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
