--- a/OpenCase/RUS/apps.html
+++ b/OpenCase/RUS/apps.html
@@ -3,6 +3,7 @@
 		<title>Другие приложения</title>
 		<script src="../scripts/jquery.min.js"></script>
 		<script src="../scripts/jquery.cookie.js"></script>
+		<script src="../scripts/main.js"></script>
 		<script src="../scripts/settings.js"></script>
 		<script src="../../android/apps.js"></script>
 
