--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -3,10 +3,11 @@
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/jquery.cookie.js"></script>
 <script src="../scripts/jquery-ui.min.js"></script>
-<script src="../scripts/skinNames.js"></script>
-<script src="../scripts/settings.js"></script>
 <script src="../scripts/main.js"></script>
+<script src="../scripts/settings.js"></script>
+<script src="../scripts/skinNames.js"></script>
 <script src="../scripts/cases2.js"></script>
+<script src="../scripts/openCase.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
@@ -16,14 +17,24 @@
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
+
+<link rel="stylesheet" type="text/css" href="../css/animate.css">
+<link rel="stylesheet" href="../css/Lobibox.min.css"/>
+<script src="../scripts/Lobibox.min.js"></script>
 </head>
 <body data-localization="cases" data-inventory="no-load">
 <div class="navigationBar" data-menu-EN="Open Cases" data-menu-RU="Открыть кейсы"></div>
-<div class="popup">
+
+<div class="popup" id="special-popup">
 <span id='closePopup'></span>
 <span id='js-local-special-text'>Чтобы открыть специальный кейс, откройте ещё</span> <span id='special'>?</span> <span id='js-local-special-text2'>кейсов.</span><br><span id='js-local-special-text3'>Или посмотрите рекламу.</span>
 <button id='showVideoAd'>Посмотреть рекламу</button>
 <span class='js-secretField' style='display: none'></span>
+</div>
+
+<div class="popup" id="rank-popup">
+<span id='closePopup'></span>
+<span id='js-local-rank-text'>Только игроки с рангом</span> <span id='rank'>?</span> <span id='js-local-rank-text2'> и выше могут открыть этот кейс.</span><br><a href="faq.html#js-local-question-rank" class="inline-link"><span id='js-local-rank-text3'>Как поднять ранг?</span></a>
 </div>
 <div class="cases">
 <div id="Default"><h1>Кейсы</h1></div>
@@ -65,11 +76,44 @@ $(function() {
 	if (isAndroid()) {
 		fromLocalStorageToDB();
 		
-		var version = parseFloat(client.getCurrentAppVersionName());
+		var version = client.getCurrentAppVersionName();
 
-		if (version < 1.1) {
+		if (version != "1.2.1") {
 			$('body').append('<div class="new-version"><b>' + Localization.cases2['new_version'][Settings.language] + '</b><span class="new-version__button" id="new-version__later">' + Localization.cases2['new_version_button_later'][Settings.language] + '</span><span class="new-version__button" id="new-version__update">' + Localization.cases2['new_version_button_update'][Settings.language] + '</span></div>');
 		}
+	}
+	
+	
+	
+	var lastReward = getStatistic('lastPointReward', 0);
+	var now = new Date();
+	if (lastReward == '0') 
+		lastReward = new Date(now.getFullYear(), now.getMonth(), now.getDate()-1);
+	else
+		lastReward = new Date(lastReward);
+
+	var today = new Date(now.getFullYear(), now.getMonth(), now.getDate());
+	if (lastReward < today) { // 24*60*60*1000
+		console.log(lastReward);
+		console.log(today);
+		// вчера или раньше
+		changePoints(DAILY_REWARD_POINTS);
+		Player.doubleBalance += getRank(Player.points).doubleBonus;
+		Lobibox.notify('info', {
+			pauseDelayOnHover: false,
+			continueDelayOnInactiveTab: false,
+			width: $(window).width(),
+			position: 'top center',
+			icon: false,
+			title: Localization.cases2.daily_reward_title[Settings.language],
+			size: 'mini',
+			showClass: 'fadeInDown',
+			hideClass: 'fadeOutUp',
+			msg: Localization.cases2.daily_reward_msg[Settings.language]
+		});
+		
+		saveStatistic('lastPointReward', ''+today);
+		saveStatistic('doubleBalance', Player.doubleBalance);
 	}
 });
 	
