--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -20,7 +20,7 @@
 
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 <link rel="stylesheet" href="../css/Lobibox.min.css"/>
-<script src="../scripts/Lobibox.min.js"></script>
+<script src="../scripts/lobibox.min.js"></script>
 </head>
 <body data-localization="cases" data-inventory="no-load">
 <div class="navigationBar" data-menu-EN="Open Cases" data-menu-RU="Открыть кейсы"></div>
