--- a/OpenCase/RUS/settings.html
+++ b/OpenCase/RUS/settings.html
@@ -24,7 +24,7 @@
 <link rel="stylesheet" type="text/css" href="../css/iconselect/iconselect.css">
 
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
-<link rel="stylesheet" href="../css/Lobibox.min.css"/>
+<link rel="stylesheet" href="../css/lobibox.min.css"/>
 <script src="../scripts/Lobibox.min.js"></script>
 <style>
 body {
