--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -19,7 +19,7 @@
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
-<link rel="stylesheet" href="../css/Lobibox.min.css"/>
+<link rel="stylesheet" href="../css/lobibox.min.css"/>
 <script src="../scripts/lobibox.min.js"></script>
 </head>
 <body data-localization="cases" data-inventory="no-load">
