--- a/OpenCase/RUS/settings.html
+++ b/OpenCase/RUS/settings.html
@@ -25,7 +25,7 @@
 
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 <link rel="stylesheet" href="../css/lobibox.min.css"/>
-<script src="../scripts/Lobibox.min.js"></script>
+<script src="../scripts/lobibox.min.js"></script>
 <style>
 body {
     color: #fff;
