--- a/OpenCase/RUS/inventory.html
+++ b/OpenCase/RUS/inventory.html
@@ -127,9 +127,11 @@ contractSound.src = "../sound/interface/contract.wav";
 contractSound.volume = 0.9;
 
 $(document).on("click", ".weapon", function() {
-	selectItemSound.pause();
-	selectItemSound.currentTime = 0;
-	if (Settings.sounds) selectItemSound.play();
+	if (Settings.sounds) {
+		selectItemSound.pause();
+		selectItemSound.currentTime = 0;
+		selectItemSound.play();
+	}
 	if (contractMode) {
 		if (($(this).data('type').indexOf('Сувенир') != -1) && ($(this).data('type').indexOf('Souvenir') != -1))
 			return false;
