--- a/OpenCase/RUS/ranks.html
+++ b/OpenCase/RUS/ranks.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+п»ї<!DOCTYPE html>
 <html>
 <head>
-<title>Ранги</title>
-<!-- Скрипты -->
+<meta charset="utf-8">
+<title>Р Р°РЅРіРё</title>
+<!-- РЎРєСЂРёРїС‚С‹ -->
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/jquery.cookie.js"></script>
 <script src="../scripts/main.js"></script>
@@ -14,7 +15,7 @@
 
 <script src="../scripts/localization.js"></script>
 
-<!-- Стили -->
+<!-- РЎС‚РёР»Рё -->
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 
@@ -81,8 +82,8 @@
 
 <body data-localization="ranks" data-inventory='no-load'>
 <div id="containter">
-<div class="navigationBar" data-menu-EN="Ranks" data-menu-RU="Ранги"></div>
-	<div class='your-points'><span id='locl-your-points'>Ваши очки</span><b id='points'></b></div>
+<div class="navigationBar" data-menu-EN="Ranks" data-menu-RU="Р Р°РЅРіРё"></div>
+	<div class='your-points'><span id='locl-your-points'>Р’Р°С€Рё РѕС‡РєРё</span><b id='points'></b></div>
 	<ul class='ranks-list'></ul>
 </div>
 
