About Special Thanks

--- a/OpenCase/RUS/about.html
+++ b/OpenCase/RUS/about.html
@@ -55,6 +55,7 @@ VLADOS776<br>
 <h3><span id='special-thanks'>Особая благодарность</span></h3>
 <ul>
 <li>Death Reaper</li>
+<li>misha4burn</li>
 </ul>
 <h3><span id='copyright'>Авторские права</span></h3>
 <p id='local-4'>Вся информация взята из открытых источников. Если что-либо в приложении нарушает ваши авторские права, свяжитесь со мной.</p>
