--- a/OpenCase/RUS/about.html
+++ b/OpenCase/RUS/about.html
@@ -59,7 +59,7 @@ VLADOS776<br>
 </ul>
 <h3><span id='copyright'>Авторские права</span></h3>
 <p id='local-4'>Вся информация взята из открытых источников. Если что-либо в приложении нарушает ваши авторские права, свяжитесь со мной.</p>
-<p id='secret' style='display:none'><a href='double.html'>Double</a></p>
+<p id='secret' style='display:none'><a href='marketplace.html'>Market</a></p>
 </div>
 <script>
 	if (Player.nickname == 'VLADOS776') $("#secret").css('display', 'block')
