--- a/OpenCase/RUS/double.html
+++ b/OpenCase/RUS/double.html
@@ -53,7 +53,7 @@
 <div class="bets">
 <span class='add-to-bet' data-bet='clear'>0</span><span data-bet='1' class='add-to-bet'>+1</span><span data-bet='10' class='add-to-bet'>+10</span><span data-bet='100' class='add-to-bet'>+100</span><span data-bet='1000' class='add-to-bet'>+1000</span><span data-bet='1/2' class='add-to-bet'>1/2</span><span data-bet='x2' class='add-to-bet'>x2</span><span data-bet='max' class='add-to-bet'>Max</span>
 </div>
-<input type="text" id="bet" maxlength='7'/>
+<input type="text" id="bet" maxlength='7' pattern="^[0-9]+$"/>
 
 <div class='bets-tables'>
 	<table class='bets-tables__table bets-red-table'>
