--- a/OpenCase/RUS/marketplace.html
+++ b/OpenCase/RUS/marketplace.html
@@ -32,7 +32,7 @@
 
 </style>>
 </head>
-<body data-localization="ranks" data-inventory='no-load'>
+<body data-localization="marketplace" data-inventory='no-load'>
 <div id="containter">
 <div class="navigationBar" data-menu-EN="Marketplace" data-menu-RU="Торговая площадка"></div>
 <div id="containter">
