--- a/OpenCase/RUS/market.html
+++ b/OpenCase/RUS/market.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<title>Торговая площадка</title>
+<title>Магазин</title>
 <!-- Скрипты -->
 <script src="../scripts/jquery.min.js"></script>
 <script src="../scripts/jquery.cookie.js"></script>
@@ -34,7 +34,7 @@
 </head>
 <body data-localization="marketplace" data-inventory='no-load'>
 <div id="containter">
-<div class="navigationBar" data-menu-EN="Marketplace" data-menu-RU="Торговая площадка"></div>
+<div class="navigationBar" data-menu-EN="Market" data-menu-RU="Магазин"></div>
 <div id="containter">
 	<div id="search">
 		<input type="text" name="search_text" id="search_text" placeholder="Search"/>
