--- a/OpenCase/RUS/rulet.html
+++ b/OpenCase/RUS/rulet.html
@@ -15,6 +15,8 @@
 <script src="../scripts/jquery-ui.min.js"></script>
 <script src="../scripts/inventory.js"></script>
 
+<script src="../scripts/md5-min.js"></script>
+
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
 
