--- a/OpenCase/RUS/coinflip.html
+++ b/OpenCase/RUS/coinflip.html
@@ -12,6 +12,7 @@
 <script src="../scripts/prices.js"></script>
 <script src="../scripts/inventory.js"></script>
 <script src="../scripts/jackpotBots.js"></script>
+<script src="../scripts/md5-min.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
