--- a/OpenCase/RUS/double.html
+++ b/OpenCase/RUS/double.html
@@ -13,6 +13,7 @@
 <script src="../scripts/jackpotBots.js"></script>
 <script src="../scripts/jquery-ui.min.js"></script>
 <script src="../scripts/inventory.js"></script>
+<script src="../scripts/md5-min.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
