Settings Codes + min scripts

--- a/OpenCase/RUS/faq.html
+++ b/OpenCase/RUS/faq.html
@@ -15,7 +15,6 @@
 
 		<script src="../scripts/localization.js"></script>
 
-	</head>
 	<style>
 		body {
 		color: #fff;
@@ -51,6 +50,7 @@
 			margin: 5px 0;
 		}
 	</style>
+	</head>
 	<body data-localization='faq'>
 		<div class="navigationBar" data-menu-EN="FAQ" data-menu-RU="FAQ"></div>
 		<div class='container'>
@@ -65,7 +65,7 @@
 				</li>
 				<li>
 					<span class='question' id='js-local-question-rank'>Как поднять ранг?</span>
-					<span class='answer' id='js-local-answer-rank'>Чтобы повысить ранг, нужно заработать очки. Очки, даются за следующие действия:<ul><li>Открыть приложение — <i class='js-var' data-var='DAILY_REWARD_POINTS'></i> очков (награда даётся раз в день)</li><li>Открыть кейс — <i class='js-var' data-var='OPEN_CASE_REWARD_POINTS'></i> очко</li><li>Победить в мини-игре — <i class='js-var' data-var='GAME_WIN_REWARD_POINTS'></i> очка</ul></span>
+					<span class='answer' id='js-local-answer-rank'>Чтобы повысить ранг, нужно заработать очки. Очки, даются за следующие действия:<ul><li>Открыть приложение — <i class='js-var' data-var='DAILY_REWARD_POINTS'></i> очков (награда даётся раз в день)</li><li>Открыть кейс — <i class='js-var' data-var='OPEN_CASE_REWARD_POINTS'></i> очко</li><li>Победить в мини-игре — <i class='js-var' data-var='GAME_WIN_REWARD_POINTS'></i> очка</li></ul></span>
 				</li>
 				<li>
 					<span class='question' id='js-local-question-doublePoints'>Где можно потратить очки дабла?</span>
