--- a/OpenCase/RUS/market.html
+++ b/OpenCase/RUS/market.html
@@ -35,7 +35,6 @@
 <body data-localization="marketplace" data-inventory='no-load'>
 <div id="containter">
 <div class="navigationBar" data-menu-EN="Market" data-menu-RU="Магазин"></div>
-<div id="containter">
 	<div id="search">
 		<input type="text" name="search_text" id="search_text" placeholder="Search"/>
 		<span type="button" name="search_button" id="search_button">
@@ -45,8 +44,8 @@
 	
 	<table id="search_result"></table>
 	
-	<div id="weaponInfoContainer" style="display: none">
-	<div class="glassBlur" style='width: 100%; height: 100%'></div>
+	<div id="weaponInfoContainer" style="display: none;">
+	<div class="glassBlur" style='width: 100%; height: 100%;'></div>
 	<div class="fullWeaponInfo" >
 		<span id="weaponName"></span>
 		<img src="" id="weaponImg">
